--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.0.0",
     "history": "^4.10.1",
     "immer": "^9.0.12",
+    "moment": "^2.29.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.8",
