Hosting by firebase and add gitignore

--- a/magazine-firebase/.gitignore
+++ b/magazine-firebase/.gitignore
@@ -24,3 +24,12 @@ yarn-error.log*
 
 
 .env
+
+
+.firebaserc
+database.rules.json
+firebase.json
+firestore.indexes.json
+firestore.rules
+storage.rules
+.firebase/*.cache
