--- a/magazine/package.json
+++ b/magazine/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
