--- a/magazine/package.json
+++ b/magazine/package.json
@@ -31,5 +31,6 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "vite": "^2.9.5"
-  }
+  },
+  "proxy": "http://146.56.187.171/"
 }
